--- a/variants/mysql-5.6
+++ b/variants/mysql-5.6
@@ -1,1 +1,4 @@
-    apt-get install -y mysql-client-5.6 && \
+    apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 8C718D3B5072E1F5 && \
+    echo "deb http://repo.mysql.com/apt/debian/ stretch mysql-5.6" | tee /etc/apt/sources.list.d/mysql-5.6.list && \
+    apt-get update && \
+    apt-get install -y mysql-community-client && \
